<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Veiled</string>
    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>

    <!-- Facebook -->
    <string name="app_id">1602786609935678</string>
    <string name="send_request">Send Request</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Post ID: %1$s</string>
    <string name="hello_user">Bun venit in Veiled, %1$s!</string>
    <string name="ok">OK</string>
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>

    <string-array name="panel_array">
        <item>Home</item>
        <item>Settings</item>
        <item>Help</item>
        <item>Credits</item>
    </string-array>
    <string name="title_activity_aearial_finder">AearialFinder</string>

    <string-array name="categ_details">
        <item>\n\t One cannot think well, love well, sleep well, if one has not dined well. \n\n\n\t\t\t\t\t\t  Virginia Woolf, A Room of One\'s Own</item>
        <item>\n\tFirst you take a drink, then the drink takes a drink, then the drink takes you. \n\n\n\t\t\t\t\t\t Scott Fitzgerald</item>
        <item>\n\tLife has but one true charm: the charm of the game. But what if we’re indifferent to whether we win or lose? \n\n\n\t\t\t\t\t\t Charles Baudelaire</item>
        <item>\n\tNever trust a computer you can\'t throw out a window \n\n\n\t\t\t\t\t\t Steve Wozniak</item>
        <item>\n\tMovie without romance feels like food without flavor. \n\n\n\t\t\t\t\t\t Toba Beta, Master of Stupidity</item>
        <item>\n\tLove art in yourself, and not yourself in art. \n\n\n\t\t\t\t\t\t Konstantin Stanislavski, My Life In Art</item>
        <item>\n\tThe world is a book and those who do not travel read only one page. \n\n\n\t\t\t\t\t\t Augustine of Hippo</item>
        <item>\n\tA woman who cuts her hair is about to change her life. \n\n\n\t\t\t\t\t\t Coco Chanel</item>
        <item>\n\tSo many books, so little time. \n\n\n\t\t\t\t\t\t Frank Zappa</item>
        <item>\n\tAs long as there was coffee in the world, how bad could things be? \n\n\n\t\t\t\t\t\t Cassandra Clare, City of Ashes</item>


    </string-array>

    <string name="help_mainscreen">Cand sunteti notificat,trebuie sa va uitati in jurul dvs dupa stickerele noastre.\n\nTot ce aveti de facut este sa apasati pe butonul de camera din ecranul principal.\n\nNoi nu dorim sa va deranjam, deci daca nu va intereseaza o categorie puteti sa o deselectati din sectiunea <b>Preferinte</b>, prezenta in Meniul Lateral. </string>
    <string name="help_settings">In sectiunea <b>Setari</b> va puteti seta zilele in care puteti fi notificati, Luni-Vineri sau Weekend, dar si orele in care sunteti disponibil.\n\n
Aici puteti da <b>log out</b> din Facebook.</string>
    <string name="help_howtocollect">Daca ati gasit un sticker cautand cu camera, tot ce trebuie sa faceti este sa hraniti cameleonul nostru infometat iar campania va fi colectata.</string>
    <string name="help_wherecanisee">In Meniul Lateral, in sectiunea <b>Colectate</b>, puteti vedea toate stickerele pe care le-ati gasit si colectat si detalii despre ele.\n\nAici, puteti de asemenea vedea si <b>Bar Code</b>,care trebuie aratat magazinului pentru a beneficia de oferta.\n\nIn sectiunea <b>Arhiva</b>, puteti vedea istoria activitatii dvs: toate stickerele colectate de dvs de cand ati instalat pentru prima oara aplicatia.\n\n
<b>Attention!</b> Fiecare oferta e valabila numai pana la data expirarii acesteia, detaliu prezent in secitunea Colectate!</string>
    <string name="help_share">Pentru a ne ajuta sa crestem si sa fim capabili de a oferi promotii din ce in ce mai bune, va puteti invita si prietenii sa isi instaleze aplicatia intrand
        in sectiunea <b>Invita un prieten</b></string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <!-- GEOFENCING -->

    <!-- UI -->
    <string name="geofence1">Geofence 1</string>
    <string name="geofence2">Geofence 2</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="menu_item_clear_geofence1">Clear geofence 1</string>
    <string name="menu_item_clear_geofence2">Clear geofence 2</string>
    <string name="menu_item_clear_all_geofences">Clear all geofences</string>
    <string name="menu_item_clear_geofence_history">Clear stored geofences</string>
    <string name="radius">Radius</string>

    <string name="add_geofences_result_success">
        Add Geofences: Success GeofenceRequestIds=%1$s
    </string>
    <string name="add_geofences_result_failure">
        Add Geofences: Failure, error code %1$d GeofenceRequestIds=%2$s
    </string>
    <string name="add_geofences_already_requested_error">
        Can\'t add geofences, previous request hasn\'t finished.
    </string>
    <string name="connected">Client connected</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>
    <string name="geofence_input_error_missing">Missing value</string>
    <string name="geofence_input_error_latitude_invalid">
        Invalid latitude(s). Must be in the range -90 to 90 degrees
    </string>
    <string name="geofence_input_error_longitude_invalid">
        Invalid longitude(s). Must be in the range -180 to 180 degrees
    </string>
    <string name="geofence_input_error_radius_invalid">
        Invalid radius(s). Must be 1 meter or greater.
    </string>
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_error_detail">
        Geofence transition error, code %1$d message
    </string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error. Invalid type %1$d in geofences %2$s
    </string>
    <string name="geofence_transition_unknown">Unknown transition</string>
    <string name="invalid_action">Invalid action received. See error log for details.</string>
    <string name="invalid_action_detail">Invalid action %1$s received.</string>
    <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
    <string name="latitude_error_message">
        Latitude should be in the range -90 to 90 degrees
    </string>
    <string name="longitude_error_message">
        Longitude should be in the range -180 to 180 degrees
    </string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="play_services_available">Location Services is available</string>
    <string name="radius_error_message">Radius must be greater than or equal to 0</string>
    <string name="register_geofence">Register geofences</string>
    <string name="remove_geofences_id_failure">
        Removing geofences by request id failed: error code %1$d GeofenceRequestIds=%2$s
    </string>
    <string name="remove_geofences_already_requested_error">
        Can\'t remove geofences, previous request hasn\'t finished.
    </string>
    <string name="remove_geofences_id_success">
        Removing geofences by request ids succeeded: request ids: %1$s
    </string>
    <string name="remove_geofences_intent_failure">
        Removing all geofences failed: error code %1$d
    </string>
    <string name="remove_geofences_intent_success">
        Removing all geofences succeeded.
    </string>
    <string name="transition_entered">entered</string>
    <string name="transition_exited">exited</string>
    <string name="transition_unknown">unknown</string>
    <string name="unknown">--Unknown--</string>
    <string name="unknown_activity_request_code">
        Received an unknown activity request code %1$d in onActivityResult.
    </string>
    <string name="unregister_geofence">Remove geofences</string>
    <string name="unregister_geofence1">Remove geofence 1</string>
    <string name="unregister_geofence2">Remove geofence 2</string>

    <!-- Number patterns -->
    <string name="lat_lng_pattern">* ###.00000000;* -###.00000000</string>
    <string name="radius_pattern">* #.0000</string>
    <string name="title_activity_preferences">PreferencesActivity</string>
    <string name="title_activity_new_menu">NewMenu</string>
</resources>
