<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:background="#46b39e"
    >
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/headerHelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">
        <ImageView
            android:id="@+id/backButtonHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_action_back"
            />
        <ImageView
            android:id="@+id/helpIconIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/backButtonHelp"
            android:background="@drawable/helpr"
            />

        <TextView
            android:id="@+id/helpTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/helpIconIV"
            android:gravity="center"
            android:text="Help"
            android:textAlignment="center"
            android:textSize="25sp"
            />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/emptyBlackLineLayoutHelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headerHelp"
        android:background="#000000"
        android:orientation="horizontal"
        >
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/bodyHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emptyBlackLineLayoutHelp"
        >

        <TextView
            android:id="@+id/mainscreenTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="Main screen"
            android:textAlignment="center"
            android:textSize="20sp"
            />

        <ImageView
            android:id="@+id/mainscreenPicCameraIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mainscreenTV"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/buton"
            />
        <ImageView
            android:id="@+id/mainscreenPicPrefsIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mainscreenPicCameraIV"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/help1"
            />
        <TextView
            android:id="@+id/mainscreenDetailsTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mainscreenTV"
            android:layout_toRightOf="@+id/mainscreenPicCameraIV"
            android:text="@string/help_mainscreen"
            android:textAlignment="center"
            android:textSize="15sp"
            />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/emptyBlackLineLayoutHelp2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bodyHelp"
        android:background="#000000"
        android:orientation="horizontal"
        >
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/bodySettingsHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emptyBlackLineLayoutHelp2"
        >
        <RelativeLayout
            android:id="@+id/bodySettingsHelpHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/settingsHelpIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/settings_icon"
            />
        <TextView
            android:id="@+id/settingsHelpTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/settingsHelpIV"
            android:gravity="center"
            android:text="Settings"
            android:textAlignment="center"
            android:textSize="20sp"
            />
        </RelativeLayout>

        <TextView
            android:id="@+id/settingsHelpDetailsTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bodySettingsHelpHeader"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/help_settings"
            android:textAlignment="center"
            android:textSize="16sp"
            />

     </RelativeLayout>

    <LinearLayout
        android:id="@+id/emptyBlackLineLayoutHelp3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bodySettingsHelp"
        android:layout_marginTop="10dp"
        android:background="#000000"
        android:orientation="horizontal"
        >
    </LinearLayout>



    <RelativeLayout
            android:id="@+id/bodyCollectedHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emptyBlackLineLayoutHelp3"
            >

        <TextView
            android:id="@+id/howToCollectHelpTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="How to collect a sticker?"
            android:textAlignment="center"
            android:textSize="20sp"
            />
        <ImageView
            android:id="@+id/howToCollectHelpIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/howToCollectHelpTV"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/h2"
            />

        <TextView
            android:id="@+id/howToCollectDetailsHelpTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/howToCollectHelpTV"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/howToCollectHelpIV"
            android:text="@string/help_howtocollect"
            android:textAlignment="center"
            android:textSize="16sp"
            />
   </RelativeLayout>

    <LinearLayout
        android:id="@+id/emptyBlackLineLayoutHelp4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bodyCollectedHelp"
        android:layout_marginTop="10dp"
        android:background="#000000"
        android:orientation="horizontal"
        >
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/bodyWhereToSeeHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emptyBlackLineLayoutHelp4"
        >
        <RelativeLayout
            android:id="@+id/bodyWhereToSeeHelpHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp">
        <ImageView
            android:id="@+id/whereCanISeeHelpIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/collected_pink"
            />
        <ImageView
            android:id="@+id/whereCanISeeHelp2IV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/whereCanISeeHelpIV"
            android:background="@drawable/archivedr"
            />
        <TextView
            android:id="@+id/wherecanIseeHelpTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/whereCanISeeHelp2IV"
            android:gravity="center"
            android:text="Where are my stickers?"
            android:textAlignment="center"
            android:textSize="20sp"
            />
        </RelativeLayout>
        <TextView
            android:id="@+id/wherecanIseeHelpDetailsTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bodyWhereToSeeHelpHeader"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/help_wherecanisee"
            android:textAlignment="center"
            android:textSize="16sp"
            />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/emptyBlackLineLayoutHelp5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bodyWhereToSeeHelp"
        android:layout_marginTop="10dp"
        android:background="#000000"
        android:orientation="horizontal"
        >
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/bodyShareHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emptyBlackLineLayoutHelp5">
        <RelativeLayout
            android:id="@+id/bodyShareHelpHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/shareLogoHelpIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/friends_icon"
            />

        <TextView
            android:id="@+id/shareHelpTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/shareLogoHelpIV"
            android:gravity="center"
            android:text="Share with a friend !"
            android:textAlignment="center"
            android:textSize="20sp"
            />
        </RelativeLayout>

        <ImageView
            android:id="@+id/shareHelpIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bodyShareHelpHeader"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/help3"
            />
        <TextView
            android:id="@+id/shareHelpDetailsTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bodyShareHelpHeader"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/shareHelpIV"
            android:text="@string/help_share"
            android:textAlignment="center"
            android:textSize="16sp"
            />

    </RelativeLayout>
    </RelativeLayout>

</ScrollView>